<resources>
    <string name="app_name">TestSqlite</string>
    <string name="button">Button</string>
    <string name="add">Add</string>
    <string name="list">List</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="score_player">Score Player</string>
    <string name="name_player">Name Player</string>
    <string name="_0_records_found">0 Records found</string>
    <string name="play">Play</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="yes">Yes</string>
    <string name="la_question_est_ou_n_est_pas">La question est ou n\'est pas ?</string>
    <string name="perhaps">Perhaps</string>
    <string name="votre_score_1002pts">Votre Score : 1002Pts</string>
    <string name="no">no</string>
    <string name="out">out</string>
    <string name="score">Score</string>
    <string name="name">Name</string>
</resources>
