<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.paul.testsqlite.Main3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtScoreM3A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/votre_score_1002pts"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtQuestM3A"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/la_question_est_ou_n_est_pas"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_weight="0.20">

        <Button
            android:id="@+id/outBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/out"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/noBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/perhapsBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/perhaps"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/yesBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/yes"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>
