<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.paul.testsqlite.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="106dp"
            android:layout_weight="1"
            android:text="@string/add"
            tools:ignore="ButtonStyle,NestedWeights" />

        <TextView
            android:id="@+id/textViewRecordCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_0_records_found"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/listBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.53"
            android:text="@string/list"
            tools:ignore="ButtonStyle,NestedWeights" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/update"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/supprBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <Button
            android:id="@+id/playbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.53"
            android:text="@string/play" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="0.53">

            <LinearLayout
                android:id="@+id/linearLayoutRecords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
